--- a/latex_in_jupyternotebook.ipynb
+++ b/latex_in_jupyternotebook.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualizing logical formula and proof tree need graphic&mdash;ASCII character set is not good enough.  \n",
+    "Visualizing logical formula and proof tree needs graphic&mdash;ASCII character set is not good enough.  \n",
     "\n",
     "We'll use $\\LaTeX$ to visualize and render logical syntactic objects such as terms, formulas, proof trees, logic tableaux etc.\n",
     "\n",
