--- a/latex_in_jupyternotebook.ipynb
+++ b/latex_in_jupyternotebook.ipynb
@@ -5,9 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualizing logical formula and proof tree need graphic&mdash;ASCII character set is not good enough.  \n",
+    "Visualizing logical formula and proof tree needs graphic&mdash;ASCII character set is not good enough.  \n",
     "\n",
     "We'll use $\\LaTeX$ to visualize and render logical syntactic objects such as terms, formulas, proof trees, logic tableaux etc.\n",
+    "\n",
+    "<img src=\"./pics/fmla_and_prf.png\" width=450>\n",
     "\n",
     "In Web, we have an excellent tool called MathJax.\n",
     "\n",
