MathJax in Jupyter Notebook

--- a/latex_in_jupyternotebook.ipynb
+++ b/latex_in_jupyternotebook.ipynb
@@ -15,12 +15,12 @@
     "\n",
     "In Juputer Notebook, we could simply put LaTeX source in Markdown cells, but for computer generated syntactic objects, this practice would be quite cumbersome and unacceptable.\n",
     "\n",
-    "Fortunately we can import the tools we need from the `Ipython.display`."
+    "Fortunately we can import the tools we need from `Ipython.display`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,9 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Simple one line formula.\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/latex": [
@@ -43,6 +51,40 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "2. Array environment\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\begin{array}{lcr} \n",
+       "              A \\to B & \\sqrt{x^2 + y^2} & 1234567 \\\\[1ex] \n",
+       "             \\forall x\\exists y (x < y) \\models \\theta & \\frac{1}{y} & 2 \n",
+       "             \\end{array}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "3. IPynb.display.Latex() doesn't work in Google Colab.\n",
+      "It only works in local Jupyter notebook (in web browser or VS Code).\n",
+      "\n"
+     ]
     },
     {
      "data": {
@@ -61,43 +103,45 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\begin{array}{lcr} \n",
-       "             \\sqrt{x^2 + 1} & A \\to B & 1234567 \\\\ \n",
-       "             \\forall x\\exists y (x < y) \\models \\theta & y^2 & 2 \n",
-       "             \\end{array}$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
+    "print(\"1. Simple one line formula.\\n\")\n",
     "display(Math(r'\\sqrt{a^2 + b^2}'))\n",
     "\n",
+    "print(\"\\n2. Array environment\\n\")\n",
+    "display(Math(r\"\"\"\\begin{array}{lcr} \n",
+    "              A \\to B & \\sqrt{x^2 + y^2} & 1234567 \\\\[1ex] \n",
+    "             \\forall x\\exists y (x < y) \\models \\theta & \\frac{1}{y} & 2 \n",
+    "             \\end{array}\"\"\"))\n",
+    "\n",
+    "\n",
+    "print(\"\"\"\n",
+    "3. IPynb.display.Latex() doesn't work in Google Colab.\n",
+    "It only works in local Jupyter notebook (in web browser or VS Code).\n",
+    "\"\"\")\n",
     "display(Latex(r\"\"\"This is a $\\LaTeX$ document.\n",
     "\n",
     "$\\quad f(x) = \\begin{cases} x & \\text{if }x \\geq 0, \\\\\n",
     "-x & \\text{otherwise}.\n",
     "\\end{cases}$\n",
     "\n",
-    "Great!\"\"\"))\n",
+    "Great!\"\"\"))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Code()` can be useful in showing proof trees in raw text format.  \n",
     "\n",
-    "display(Math(r\"\"\"\\begin{array}{lcr} \n",
-    "             \\sqrt{x^2 + 1} & A \\to B & 1234567 \\\\ \n",
-    "             \\forall x\\exists y (x < y) \\models \\theta & y^2 & 2 \n",
-    "             \\end{array}\"\"\"))"
+    "It would be great if we can do syntax highlighting."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -176,25 +220,37 @@
        ".output_html .vg { color: #19177C } /* Name.Variable.Global */\n",
        ".output_html .vi { color: #19177C } /* Name.Variable.Instance */\n",
        ".output_html .vm { color: #19177C } /* Name.Variable.Magic */\n",
-       ".output_html .il { color: #666666 } /* Literal.Number.Integer.Long */</style><div class=\"highlight\"><pre><span></span><span class=\"k\">def</span> <span class=\"nf\">myfn</span><span class=\"p\">(</span><span class=\"n\">x</span><span class=\"p\">):</span>\n",
-       "  <span class=\"nb\">print</span><span class=\"p\">(</span><span class=\"s2\">&quot;hello world</span><span class=\"se\">\\n</span><span class=\"s2\">&quot;</span><span class=\"p\">)</span>\n",
-       "  <span class=\"k\">for</span> <span class=\"n\">i</span> <span class=\"ow\">in</span> <span class=\"nb\">range</span><span class=\"p\">(</span><span class=\"mi\">5</span><span class=\"p\">):</span>\n",
-       "    <span class=\"nb\">print</span><span class=\"p\">(</span><span class=\"n\">x</span><span class=\"o\">*</span><span class=\"n\">i</span><span class=\"p\">,</span> <span class=\"n\">x</span> <span class=\"o\">+</span> <span class=\"n\">i</span><span class=\"o\">**</span><span class=\"mi\">2</span><span class=\"p\">)</span>\n",
+       ".output_html .il { color: #666666 } /* Literal.Number.Integer.Long */</style><div class=\"highlight\"><pre><span></span>1. A impl B\n",
+       "2. B impl C\n",
+       "entails\n",
+       "  3. A  \n",
+       "  entails\n",
+       "  4. B : 1,3 impl elem \n",
+       "  5. C : 2,4 impl elem\n",
+       "6. A impl C : 3-5 impl intro\n",
        "</pre></div>\n"
       ],
       "text/latex": [
        "\\begin{Verbatim}[commandchars=\\\\\\{\\}]\n",
-       "\\PY{k}{def} \\PY{n+nf}{myfn}\\PY{p}{(}\\PY{n}{x}\\PY{p}{)}\\PY{p}{:}\n",
-       "  \\PY{n+nb}{print}\\PY{p}{(}\\PY{l+s+s2}{\\PYZdq{}}\\PY{l+s+s2}{hello world}\\PY{l+s+se}{\\PYZbs{}n}\\PY{l+s+s2}{\\PYZdq{}}\\PY{p}{)}\n",
-       "  \\PY{k}{for} \\PY{n}{i} \\PY{o+ow}{in} \\PY{n+nb}{range}\\PY{p}{(}\\PY{l+m+mi}{5}\\PY{p}{)}\\PY{p}{:}\n",
-       "    \\PY{n+nb}{print}\\PY{p}{(}\\PY{n}{x}\\PY{o}{*}\\PY{n}{i}\\PY{p}{,} \\PY{n}{x} \\PY{o}{+} \\PY{n}{i}\\PY{o}{*}\\PY{o}{*}\\PY{l+m+mi}{2}\\PY{p}{)}\n",
+       "1. A impl B\n",
+       "2. B impl C\n",
+       "entails\n",
+       "  3. A  \n",
+       "  entails\n",
+       "  4. B : 1,3 impl elem \n",
+       "  5. C : 2,4 impl elem\n",
+       "6. A impl C : 3\\PYZhy{}5 impl intro\n",
        "\\end{Verbatim}\n"
       ],
       "text/plain": [
-       "def myfn(x):\n",
-       "  print(\"hello world\\n\")\n",
-       "  for i in range(5):\n",
-       "    print(x*i, x + i**2)"
+       "1. A impl B\n",
+       "2. B impl C\n",
+       "entails\n",
+       "  3. A  \n",
+       "  entails\n",
+       "  4. B : 1,3 impl elem \n",
+       "  5. C : 2,4 impl elem\n",
+       "6. A impl C : 3-5 impl intro"
       ]
      },
      "metadata": {},
@@ -202,11 +258,14 @@
     }
    ],
    "source": [
-    "display(Code(r'''def myfn(x):\n",
-    "  print(\"hello world\\n\")\n",
-    "  for i in range(5):\n",
-    "    print(x*i, x + i**2)\n",
-    "''', language='python'))"
+    "display(Code(r'''1. A impl B\n",
+    "2. B impl C\n",
+    "entails\n",
+    "  3. A  \n",
+    "  entails\n",
+    "  4. B : 1,3 impl elem \n",
+    "  5. C : 2,4 impl elem\n",
+    "6. A impl C : 3-5 impl intro''', language='text'))"
    ]
   },
   {
@@ -214,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more information I recommend [this github repo](https://github.com/Codesolid/latex-in-python)."
+    "For more informationm, you may visit [this github repo](https://github.com/Codesolid/latex-in-python)."
    ]
   }
  ],
