Minor modification on arithparser.ipynb

--- a/arith4parser.ipynb
+++ b/arith4parser.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "    self.pos = pos\n",
     "    # pos is the position(=index) of the token in the list of tokens\n",
     "    #   obtained from the tokenizer.\n",
-    "    # input text is guaranteed to be an identifier or a numeral.\n",
+    "    # input text is guaranteed to be an operator or an operand\n",
     "    self.type = 'operator' if text in (\"+\", \"-\", \"*\", \"/\") else 'operand'\n",
     "  \n",
     "  def __str__(self):\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,6 +117,78 @@
    ],
    "source": [
     "textall = \"first + second*+hello + 23+2\"\n",
+    "try:\n",
+    "  tokens = Tokenizer(textall).tokens\n",
+    "except ValueError as e:\n",
+    "  print(e)\n",
+    "else:\n",
+    "  for t in tokens:\n",
+    "    print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Hello' is invalid\n"
+     ]
+    }
+   ],
+   "source": [
+    "textall = \"first + second* +Hello + 23+2\"\n",
+    "try:\n",
+    "  tokens = Tokenizer(textall).tokens\n",
+    "except ValueError as e:\n",
+    "  print(e)\n",
+    "else:\n",
+    "  for t in tokens:\n",
+    "    print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'c2' is invalid\n"
+     ]
+    }
+   ],
+   "source": [
+    "textall = \"first + second* +hello + 23+c2\"\n",
+    "try:\n",
+    "  tokens = Tokenizer(textall).tokens\n",
+    "except ValueError as e:\n",
+    "  print(e)\n",
+    "else:\n",
+    "  for t in tokens:\n",
+    "    print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'023' is invalid\n"
+     ]
+    }
+   ],
+   "source": [
+    "textall = \"first + second*-hello + 023+2\"\n",
     "try:\n",
     "  tokens = Tokenizer(textall).tokens\n",
     "except ValueError as e:\n",
