--- a/arith4parser.ipynb
+++ b/arith4parser.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Token():\n",
+    "class Token:\n",
     "  def __init__(self, text, pos):\n",
     "    self.text = text\n",
     "    self.pos = pos\n",
@@ -67,35 +67,51 @@
    "source": [
     "import re\n",
     "\n",
-    "class Tokenizer():\n",
-    "  def __init__(self, text):\n",
-    "    self.text = text\n",
-    "    self.pos = 0\n",
-    "    self.tokens = []\n",
-    "    self.tokenize()\n",
+    "def tokenizer(text):\n",
+    "  pos = 0\n",
+    "  tokens = []\n",
+    "  # split the input text into a list of tokens at word boundries and whitespaces\n",
+    "  # then remove empty strings and strip off leading and trailing whitespaces\n",
+    "  li = [s.strip() for s in re.split(r\"\\b|\\s\", text, re.ASCII) \n",
+    "                  if s.strip()]\n",
+    "  for s in li:\n",
+    "    if not s.isascii():\n",
+    "      raise ValueError(f\"'{s}' is invalid (non-ASCII)\")\n",
+    "    if not (set(s).issubset(\"+-*/\") or        # operator\n",
+    "            (s.isdecimal() and s[0]!='0') or  # numeral\n",
+    "            (s.isalpha() and s.islower())):   # identifier\n",
+    "      raise ValueError(f\"'{s}' is invalid\")\n",
+    "    if(set(s).issubset(\"+-*/\") and len(s) > 1):\n",
+    "      # split string of consecutive operators into individual characters\n",
+    "      for c in s:\n",
+    "        tokens.append(Token(c, pos))\n",
+    "        pos += 1\n",
+    "    else:\n",
+    "      tokens.append(Token(s, pos))\n",
+    "      pos += 1\n",
     "  \n",
-    "  def tokenize(self):\n",
-    "    li = [s.strip() for s in re.split(r\"\\b|\\s\",self.text, re.ASCII) if s.strip()]\n",
-    "    for s in li:\n",
-    "      if not s.isascii():\n",
-    "        raise ValueError(f\"'{s}' is invalid (non-ASCII)\")\n",
-    "      if not (set(s).issubset(\"+-*/\") or # operator\n",
-    "              (s.isdecimal() and s[0]!='0') or # numeral\n",
-    "              (s.isalpha() and s.islower())): # identifier\n",
-    "        raise ValueError(f\"'{s}' is invalid\")\n",
-    "      if(set(s).issubset(\"+-*/\") and len(s) > 1):\n",
-    "        # split string of consecutive operators into individual characters\n",
-    "        for c in s:\n",
-    "          self.tokens.append(Token(c, self.pos))\n",
-    "          self.pos += 1\n",
-    "      else:\n",
-    "        self.tokens.append(Token(s, self.pos))\n",
-    "        self.pos += 1"
+    "  return tokens"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def testTokenizer(text):\n",
+    "  try:\n",
+    "    tokens = tokenizer(text)\n",
+    "  except ValueError as e:\n",
+    "    print(f\"Tokenizer: {e}\")\n",
+    "  else:\n",
+    "    for t in tokens:\n",
+    "      print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,38 +132,7 @@
     }
    ],
    "source": [
-    "textall = \"first + second*+hello + 23+2\"\n",
-    "try:\n",
-    "  tokens = Tokenizer(textall).tokens\n",
-    "except ValueError as e:\n",
-    "  print(e)\n",
-    "else:\n",
-    "  for t in tokens:\n",
-    "    print(t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'Hello' is invalid\n"
-     ]
-    }
-   ],
-   "source": [
-    "textall = \"first + second* +Hello + 23+2\"\n",
-    "try:\n",
-    "  tokens = Tokenizer(textall).tokens\n",
-    "except ValueError as e:\n",
-    "  print(e)\n",
-    "else:\n",
-    "  for t in tokens:\n",
-    "    print(t)"
+    "testTokenizer(\"first + second*+hello + 23+2\")"
    ]
   },
   {
@@ -159,43 +144,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'c2' is invalid\n"
+      "Tokenizer: 'Hello' is invalid\n",
+      "Tokenizer: 'c2' is invalid\n",
+      "Tokenizer: '023' is invalid\n"
      ]
     }
    ],
    "source": [
-    "textall = \"first + second* +hello + 23+c2\"\n",
-    "try:\n",
-    "  tokens = Tokenizer(textall).tokens\n",
-    "except ValueError as e:\n",
-    "  print(e)\n",
-    "else:\n",
-    "  for t in tokens:\n",
-    "    print(t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'023' is invalid\n"
-     ]
-    }
-   ],
-   "source": [
-    "textall = \"first + second*-hello + 023+2\"\n",
-    "try:\n",
-    "  tokens = Tokenizer(textall).tokens\n",
-    "except ValueError as e:\n",
-    "  print(e)\n",
-    "else:\n",
-    "  for t in tokens:\n",
-    "    print(t)"
+    "testTokenizer(\"first + second* +Hello + 23+2\")\n",
+    "testTokenizer(\"first + second* +hello + 23+c2\")\n",
+    "testTokenizer(\"first + second*-hello + 023+2\")"
    ]
   }
  ],
