Parser complete for G_ar4

--- a/arith4parser.ipynb
+++ b/arith4parser.ipynb
@@ -26,16 +26,26 @@
    "outputs": [],
    "source": [
     "class Token:\n",
-    "  def __init__(self, text, pos):\n",
-    "    self.text = text\n",
-    "    self.pos = pos\n",
-    "    # pos is the position(=index) of the token in the list of tokens\n",
-    "    #   obtained from the tokenizer.\n",
-    "    # input text is guaranteed to be an operator or an operand\n",
-    "    self.type = 'operator' if text in (\"+\", \"-\", \"*\", \"/\") else 'operand'\n",
+    "  def __init__(self, value):\n",
+    "    self.value = value\n",
+    "    # input value is guaranteed to be a valid token\n",
+    "    if value in (\"+\", \"-\"):\n",
+    "      self.token_type = 'op_type1' # precedence 1\n",
+    "    elif value in (\"*\", \"/\"):\n",
+    "      self.token_type = 'op_type2' # precedence 2\n",
+    "    elif value == \"(\":\n",
+    "      self.token_type = 'lparen'\n",
+    "    elif value == \")\":\n",
+    "      self.token_type = 'rparen'\n",
+    "    elif value.isdecimal():\n",
+    "      self.token_type = 'numeral'\n",
+    "    elif value.isalpha():\n",
+    "      self.token_type = 'identifier'\n",
+    "    else:\n",
+    "      raise ValueError(f\"'{value}' is invalid token\")\n",
     "  \n",
     "  def __str__(self):\n",
-    "    return f'{self.text} ({self.type}) at {self.pos}'"
+    "    return f'{self.value} ({self.token_type})'"
    ]
   },
   {
@@ -47,16 +57,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+ (operator) at 3\n",
-      "123 (operand) at 5\n"
+      "+ (op_type1)\n",
+      "* (op_type2)\n",
+      "( (lparen)\n",
+      ") (rparen)\n",
+      "13 (numeral)\n",
+      "abc (identifier)\n"
      ]
     }
    ],
    "source": [
-    "t1 = Token(\"+\", 3)\n",
-    "print(t1)\n",
-    "t2 = Token(\"123\", 5)\n",
-    "print(t2)"
+    "print(Token(\"+\"))\n",
+    "print(Token(\"*\"))\n",
+    "print(Token(\"(\"))\n",
+    "print(Token(\")\"))\n",
+    "print(Token(\"13\"))\n",
+    "print(Token(\"abc\"))\n"
    ]
   },
   {
@@ -67,28 +83,25 @@
    "source": [
     "import re\n",
     "\n",
-    "def tokenizer(text):\n",
-    "  pos = 0\n",
+    "def tokenizer(input_text):\n",
     "  tokens = []\n",
     "  # split the input text into a list of tokens at word boundries and whitespaces\n",
     "  # then remove empty strings and strip off leading and trailing whitespaces\n",
-    "  li = [s.strip() for s in re.split(r\"\\b|\\s\", text, re.ASCII) \n",
+    "  li = [s.strip() for s in re.split(r\"\\b|\\s\", input_text, re.ASCII) \n",
     "                  if s.strip()]\n",
-    "  for s in li:\n",
+    "  for s in li: # s is a string\n",
     "    if not s.isascii():\n",
     "      raise ValueError(f\"'{s}' is invalid (non-ASCII)\")\n",
-    "    if not (set(s).issubset(\"+-*/\") or        # operator\n",
+    "    if not (set(s).issubset(\"+-*/()\") or      # operator or parenthesis\n",
     "            (s.isdecimal() and s[0]!='0') or  # numeral\n",
     "            (s.isalpha() and s.islower())):   # identifier\n",
-    "      raise ValueError(f\"'{s}' is invalid\")\n",
-    "    if(set(s).issubset(\"+-*/\") and len(s) > 1):\n",
+    "      raise ValueError(f\"'{s}' is invalid (non-token)\")\n",
+    "    if set(s).issubset(\"+-*/()\") and len(s) > 1:\n",
     "      # split string of consecutive operators into individual characters\n",
-    "      for c in s:\n",
-    "        tokens.append(Token(c, pos))\n",
-    "        pos += 1\n",
+    "      for c in s: # c is an operator character\n",
+    "        tokens.append(Token(c))\n",
     "    else:\n",
-    "      tokens.append(Token(s, pos))\n",
-    "      pos += 1\n",
+    "      tokens.append(Token(s))\n",
     "  \n",
     "  return tokens"
    ]
@@ -99,9 +112,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def testTokenizer(text):\n",
+    "def testTokenizer(input_text):\n",
     "  try:\n",
-    "    tokens = tokenizer(text)\n",
+    "    tokens = tokenizer(input_text)\n",
     "  except ValueError as e:\n",
     "    print(f\"Tokenizer: {e}\")\n",
     "  else:\n",
@@ -118,21 +131,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "first (operand) at 0\n",
-      "+ (operator) at 1\n",
-      "second (operand) at 2\n",
-      "* (operator) at 3\n",
-      "+ (operator) at 4\n",
-      "hello (operand) at 5\n",
-      "+ (operator) at 6\n",
-      "23 (operand) at 7\n",
-      "+ (operator) at 8\n",
-      "2 (operand) at 9\n"
+      "first (identifier)\n",
+      "+ (op_type1)\n",
+      "second (identifier)\n",
+      "* (op_type2)\n",
+      "( (lparen)\n",
+      "hello (identifier)\n",
+      "+ (op_type1)\n",
+      "23 (numeral)\n",
+      ") (rparen)\n",
+      "+ (op_type1)\n",
+      "2 (numeral)\n"
      ]
     }
    ],
    "source": [
-    "testTokenizer(\"first + second*+hello + 23+2\")"
+    "testTokenizer(\"first + second* (hello + 23)+2\")"
    ]
   },
   {
@@ -144,9 +158,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tokenizer: 'Hello' is invalid\n",
-      "Tokenizer: 'c2' is invalid\n",
-      "Tokenizer: '023' is invalid\n"
+      "Tokenizer: 'Hello' is invalid (non-token)\n",
+      "Tokenizer: 'c2' is invalid (non-token)\n",
+      "Tokenizer: '023' is invalid (non-token)\n"
      ]
     }
    ],
@@ -154,6 +168,137 @@
     "testTokenizer(\"first + second* +Hello + 23+2\")\n",
     "testTokenizer(\"first + second* +hello + 23+c2\")\n",
     "testTokenizer(\"first + second*-hello + 023+2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, token, children=None):\n",
+    "        self.token = token\n",
+    "        self.children = children if children else []\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return self.build_polish_notation()\n",
+    "\n",
+    "    def build_polish_notation(self):\n",
+    "        if not self.children:\n",
+    "            return str(self.token.value)\n",
+    "        \n",
+    "        notation = f\"{self.token.value} \"\n",
+    "        notation += ' '.join(child.build_polish_notation() for child in self.children)\n",
+    "        return notation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Parser:\n",
+    "    def __init__(self, tokens):\n",
+    "        self.tokens = tokens\n",
+    "        self.current_token = None\n",
+    "        self.index = -1\n",
+    "        self.advance()\n",
+    "\n",
+    "    def advance(self):\n",
+    "        self.index += 1\n",
+    "        if self.index < len(self.tokens):\n",
+    "            self.current_token = self.tokens[self.index]\n",
+    "        else:\n",
+    "            self.current_token = None\n",
+    "\n",
+    "    def parse(self):\n",
+    "        return self.expr()\n",
+    "\n",
+    "    def expr(self):\n",
+    "        node = self.term()\n",
+    "\n",
+    "        while self.current_token is not None and self.current_token.token_type in ('op_type1'):\n",
+    "            token = self.current_token\n",
+    "            self.advance()\n",
+    "\n",
+    "            right = self.term()\n",
+    "            node = Node(token, [node, right])\n",
+    "\n",
+    "        return node\n",
+    "\n",
+    "    def term(self):\n",
+    "        node = self.factor()\n",
+    "\n",
+    "        while self.current_token is not None and self.current_token.token_type in ('op_type2'):\n",
+    "            token = self.current_token\n",
+    "            self.advance()\n",
+    "\n",
+    "            right = self.factor()\n",
+    "            node = Node(token, [node, right])\n",
+    "\n",
+    "        return node\n",
+    "\n",
+    "    def factor(self):\n",
+    "        if self.current_token is not None and self.current_token.token_type == 'lparen':\n",
+    "            self.advance()\n",
+    "            node = self.expr()\n",
+    "            if self.current_token is not None and self.current_token.token_type == 'rparen':\n",
+    "                self.advance()\n",
+    "            else:\n",
+    "                raise SyntaxError(\"Expected ')' after expression.\")\n",
+    "        else:\n",
+    "            node = Node(self.current_token)\n",
+    "            self.advance()\n",
+    "\n",
+    "        return node\n",
+    "\n",
+    "def parse_input(input_text):\n",
+    "    tokens = tokenizer(input_text)\n",
+    "    parser = Parser(tokens)\n",
+    "    ast = parser.parse()\n",
+    "    return ast\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- + a * b c 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage\n",
+    "input_text = \"a + b * c - 10\"\n",
+    "ast = parse_input(input_text)\n",
+    "print(ast)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+ a * b - c d\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_text = \"a + b * (c - d)\"\n",
+    "ast = parse_input(input_text)\n",
+    "print(ast)"
    ]
   }
  ],
