Add Parse.atom(), Catch syntax error

--- a/arith4parser.ipynb
+++ b/arith4parser.ipynb
@@ -9,19 +9,21 @@
     "We'll build a parser for this grammar.\n",
     "\n",
     "```\n",
-    "<expr> ::= <expr> (\"+\" | \"-\") <term> | <term>\n",
-    "<term> ::= <term> (\"*\" | \"/\") <factor> | <factor>\n",
+    "<expr> ::= <term> { (\"+\" | \"-\") <term> }\n",
+    "<term> ::= <factor> { (\"*\" | \"/\") <factor> }\n",
     "<factor> ::= \"(\" <expr> \")\" | <atom>\n",
     "<atom> ::= <identifier> | <numeral>\n",
-    "<identifier> ::= <letter> { <letter>  }\n",
+    "<identifier> ::= <letter> { <letter> | <digit> }\n",
     "<letter> ::= [a-z] \n",
-    "<numeral> ::= [1-9] { [0-9] }\n",
+    "<numeral> ::= <positive_digit> { <digit> }\n",
+    "<digit> ::= [0-9]\n",
+    "<positive_digit> :: = [1-9]\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -172,133 +174,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Node:\n",
-    "    def __init__(self, token, children=None):\n",
-    "        self.token = token\n",
-    "        self.children = children if children else []\n",
+    "  def __init__(self, token, children=None):\n",
+    "    self.token = token # the node is labeled with a Token object\n",
+    "    self.children = children if children else [] # list of Node objects\n",
     "\n",
-    "    def __str__(self):\n",
-    "        return self.build_polish_notation()\n",
+    "  def __str__(self):\n",
+    "    return self.build_polish_notation()\n",
     "\n",
-    "    def build_polish_notation(self):\n",
-    "        if not self.children:\n",
-    "            return str(self.token.value)\n",
-    "        \n",
-    "        notation = f\"{self.token.value} \"\n",
-    "        notation += ' '.join(child.build_polish_notation() for child in self.children)\n",
-    "        return notation"
+    "  def build_polish_notation(self):\n",
+    "    ret_str = f\"{self.token.value}\"\n",
+    "    if self.children:\n",
+    "      ret_str += ' '\n",
+    "    ret_str += ' '.join(child.build_polish_notation() \n",
+    "                        for child in self.children)\n",
+    "    return ret_str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Parser:\n",
-    "    def __init__(self, tokens):\n",
-    "        self.tokens = tokens\n",
-    "        self.current_token = None\n",
-    "        self.index = -1\n",
+    "  def __init__(self, tokens):\n",
+    "    self.tokens = tokens\n",
+    "    self.current_token = None\n",
+    "    self.index = -1\n",
+    "    self.advance()  # set self.current_token to \n",
+    "                    # the first(i.e. self.index=0) element of tokens\n",
+    "\n",
+    "  def advance(self): # increment self.index and set self.current_token\n",
+    "    self.index += 1\n",
+    "    if self.index < len(self.tokens):\n",
+    "      self.current_token = self.tokens[self.index]\n",
+    "    else:\n",
+    "      self.current_token = None\n",
+    "\n",
+    "  def parse(self):\n",
+    "    return self.expr() # expr() corresponds to the starting symbol <expr>\n",
+    "\n",
+    "  def expr(self):\n",
+    "    node = self.term()\n",
+    "\n",
+    "    while(self.current_token is not None and  \n",
+    "          self.current_token.token_type in ('op_type1')):\n",
+    "      # If we are at '+' in \"a + b * c - ...\" then the next token is '-'\n",
+    "      # because we will consume tokens by self.advance() and self.term().\n",
+    "      token = self.current_token\n",
+    "      self.advance()\n",
+    "      right_term = self.term()\n",
+    "      node = Node(token, [node, right_term]) # left associative\n",
+    "\n",
+    "    return node\n",
+    "\n",
+    "  def term(self):\n",
+    "    node = self.factor()\n",
+    "\n",
+    "    while(self.current_token is not None and \n",
+    "          self.current_token.token_type in ('op_type2')):\n",
+    "      token = self.current_token\n",
+    "      self.advance()\n",
+    "      right = self.factor()\n",
+    "      node = Node(token, [node, right])\n",
+    "\n",
+    "    return node\n",
+    "\n",
+    "  def factor(self):\n",
+    "    if(self.current_token is not None and \n",
+    "       self.current_token.token_type == 'lparen'):\n",
+    "      self.advance()\n",
+    "      node = self.expr()\n",
+    "      if(self.current_token is not None and \n",
+    "         self.current_token.token_type == 'rparen'):\n",
     "        self.advance()\n",
+    "      else:\n",
+    "        raise SyntaxError(\"Expected ')' after expression, in factor()\")\n",
+    "    else:\n",
+    "      node = self.atom()\n",
     "\n",
-    "    def advance(self):\n",
-    "        self.index += 1\n",
-    "        if self.index < len(self.tokens):\n",
-    "            self.current_token = self.tokens[self.index]\n",
-    "        else:\n",
-    "            self.current_token = None\n",
+    "    return node\n",
     "\n",
-    "    def parse(self):\n",
-    "        return self.expr()\n",
-    "\n",
-    "    def expr(self):\n",
-    "        node = self.term()\n",
-    "\n",
-    "        while self.current_token is not None and self.current_token.token_type in ('op_type1'):\n",
-    "            token = self.current_token\n",
-    "            self.advance()\n",
-    "\n",
-    "            right = self.term()\n",
-    "            node = Node(token, [node, right])\n",
-    "\n",
-    "        return node\n",
-    "\n",
-    "    def term(self):\n",
-    "        node = self.factor()\n",
-    "\n",
-    "        while self.current_token is not None and self.current_token.token_type in ('op_type2'):\n",
-    "            token = self.current_token\n",
-    "            self.advance()\n",
-    "\n",
-    "            right = self.factor()\n",
-    "            node = Node(token, [node, right])\n",
-    "\n",
-    "        return node\n",
-    "\n",
-    "    def factor(self):\n",
-    "        if self.current_token is not None and self.current_token.token_type == 'lparen':\n",
-    "            self.advance()\n",
-    "            node = self.expr()\n",
-    "            if self.current_token is not None and self.current_token.token_type == 'rparen':\n",
-    "                self.advance()\n",
-    "            else:\n",
-    "                raise SyntaxError(\"Expected ')' after expression.\")\n",
-    "        else:\n",
-    "            node = Node(self.current_token)\n",
-    "            self.advance()\n",
-    "\n",
-    "        return node\n",
-    "\n",
+    "  def atom(self):\n",
+    "    if self.current_token is not None:\n",
+    "      token = self.current_token\n",
+    "      if token.token_type in ('numeral', 'identifier'):\n",
+    "        self.advance()\n",
+    "        return Node(token)\n",
+    "      else:\n",
+    "        raise SyntaxError(f\"Expected numeral or identifier, in atom(): {token}\")\n",
+    "    else:\n",
+    "      raise SyntaxError(\"Unexpected end of input, in atom()\")\n",
+    "      \n",
     "def parse_input(input_text):\n",
-    "    tokens = tokenizer(input_text)\n",
-    "    parser = Parser(tokens)\n",
-    "    ast = parser.parse()\n",
-    "    return ast\n",
-    "\n"
+    "  tokens = tokenizer(input_text)\n",
+    "  parser = Parser(tokens)\n",
+    "  ast = parser.parse() # ast = Abstract Syntax Tree\n",
+    "  return ast\n",
+    "\n",
+    "def testParser(input_text):\n",
+    "  try:\n",
+    "    tree = parse_input(input_text)\n",
+    "  except ValueError as e:\n",
+    "    print(f\"ValueError: {e}\")\n",
+    "  except SyntaxError as e:\n",
+    "    print(f\"SyntaxError: {e}\")\n",
+    "  else:\n",
+    "    print(tree)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- + a * b c 10\n"
+      "+ + a * b - c d ab\n",
+      "* + / a b 102 - const * 2 var\n",
+      "ValueError: 'UpperCaseVar' is invalid (non-token)\n",
+      "ValueError: 'c1' is invalid (non-token)\n",
+      "SyntaxError: Expected numeral or identifier, in atom(): + (op_type1)\n",
+      "SyntaxError: Unexpected end of input, in atom()\n",
+      "SyntaxError: Expected numeral or identifier, in atom(): - (op_type1)\n"
      ]
     }
    ],
    "source": [
-    "# Example usage\n",
-    "input_text = \"a + b * c - 10\"\n",
-    "ast = parse_input(input_text)\n",
-    "print(ast)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+ a * b - c d\n"
-     ]
-    }
-   ],
-   "source": [
-    "input_text = \"a + b * (c - d)\"\n",
-    "ast = parse_input(input_text)\n",
-    "print(ast)"
+    "testParser(\"a + b * (c - d) + ab\")\n",
+    "testParser(\"(a/b + 102)*(const - 2*var)\")\n",
+    "testParser(\"c - a + UpperCaseVar\")\n",
+    "testParser(\"c1 - a + UpperCaseVar\")\n",
+    "testParser(\"a + + b\")\n",
+    "testParser(\"a + b *\")\n",
+    "testParser(\"-a + b *\")"
    ]
   }
  ],
