--- a/arith4parser.ipynb
+++ b/arith4parser.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
     "      self.token_type = 'rparen'\n",
     "    elif value.isdecimal():\n",
     "      self.token_type = 'numeral'\n",
-    "    elif value.isalpha():\n",
+    "    elif value.isalnum() and value[0].isalpha():\n",
     "      self.token_type = 'identifier'\n",
     "    else:\n",
     "      raise ValueError(f\"'{value}' is invalid token\")\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,8 @@
     "      raise ValueError(f\"'{s}' is invalid (non-ASCII)\")\n",
     "    if not (set(s).issubset(\"+-*/()\") or      # operator or parenthesis\n",
     "            (s.isdecimal() and s[0]!='0') or  # numeral\n",
-    "            (s.isalpha() and s.islower())):   # identifier\n",
+    "            (s.isalnum() and s[0].isalpha() and s.islower())):   \n",
+    "                                              # identifier\n",
     "      raise ValueError(f\"'{s}' is invalid (non-token)\")\n",
     "    if set(s).issubset(\"+-*/()\") and len(s) > 1:\n",
     "      # split string of consecutive operators into individual characters\n",
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -140,20 +141,20 @@
       "( (lparen)\n",
       "hello (identifier)\n",
       "+ (op_type1)\n",
-      "23 (numeral)\n",
+      "c1 (identifier)\n",
       ") (rparen)\n",
       "+ (op_type1)\n",
-      "2 (numeral)\n"
+      "a23 (identifier)\n"
      ]
     }
    ],
    "source": [
-    "testTokenizer(\"first + second* (hello + 23)+2\")"
+    "testTokenizer(\"first + second* (hello + c1)+a23\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -161,20 +162,18 @@
      "output_type": "stream",
      "text": [
       "Tokenizer: 'Hello' is invalid (non-token)\n",
-      "Tokenizer: 'c2' is invalid (non-token)\n",
       "Tokenizer: '023' is invalid (non-token)\n"
      ]
     }
    ],
    "source": [
     "testTokenizer(\"first + second* +Hello + 23+2\")\n",
-    "testTokenizer(\"first + second* +hello + 23+c2\")\n",
     "testTokenizer(\"first + second*-hello + 023+2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +299,7 @@
       "+ + a * b - c d ab\n",
       "* + / a b 102 - const * 2 var\n",
       "ValueError: 'UpperCaseVar' is invalid (non-token)\n",
-      "ValueError: 'c1' is invalid (non-token)\n",
+      "ValueError: 'UpperCaseVar' is invalid (non-token)\n",
       "SyntaxError: Expected numeral or identifier, in atom(): + (op_type1)\n",
       "SyntaxError: Unexpected end of input, in atom()\n",
       "SyntaxError: Expected numeral or identifier, in atom(): - (op_type1)\n"
