--- a/arith5parser.ipynb
+++ b/arith5parser.ipynb
@@ -5,8 +5,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Arith4 is a simple grammar for arithmetic.\n",
-    "We'll build a parser for this grammar.\n",
+    "Arith5 is an extension of Arith4.  \n",
+    "\n",
+    "Added components are:\n",
+    "* unary prefix -\n",
+    "* unary postfix !\n",
+    "* exponentiation a^b\n",
+    "* function sin(x), cos(x), and choose(x,y)\n",
+    "\n",
+    "-a^b is -(a^b), not (-a)^b  \n",
+    "a^b! = a^(b!), not (a^b)!  \n",
+    "-a! is -(a!), not (-a)!  \n",
+    "a^b^c is a^(b^c), not (a^b)^c (right associative)\n",
     "\n",
     "```\n",
     "<expr> ::= <term> { (\"+\" | \"-\") <term> }\n",
